--- a/SharpSchedule.Persistence/SharpSchedule.Persistence.csproj
+++ b/SharpSchedule.Persistence/SharpSchedule.Persistence.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.0-m8.0.23" />
   </ItemGroup>
 
   <ItemGroup>
