WIP: Need Button and Redirect

--- a/SharpSchedule.WPF/SharpSchedule.WPF.csproj
+++ b/SharpSchedule.WPF/SharpSchedule.WPF.csproj
@@ -32,6 +32,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Page Update="Styles\LoginStyle.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
       <Page Update="Styles\InputStyle.xaml">
         <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
         <SubType>Designer</SubType>
