--- a/SharpSchedule.WPF/SharpSchedule.WPF.csproj
+++ b/SharpSchedule.WPF/SharpSchedule.WPF.csproj
@@ -41,6 +41,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Page Update="Styles\DatePickerStyle.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
       <Page Update="Styles\LoginStyle.xaml">
         <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
         <SubType>Designer</SubType>
