--- a/SharpSchedule.WPF/SharpSchedule.WPF.csproj
+++ b/SharpSchedule.WPF/SharpSchedule.WPF.csproj
@@ -29,6 +29,9 @@
       <Compile Update="Views\AddressesView.xaml.cs">
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="Views\Dialogs\AppointmentFilterDialog.xaml.cs">
+        <SubType>Code</SubType>
+      </Compile>
       <Compile Update="Views\Dialogs\AppointmentDialog.xaml.cs">
         <SubType>Code</SubType>
       </Compile>
@@ -54,6 +57,10 @@
         <SubType>Designer</SubType>
       </Page>
       <Page Update="Views\AddressesView.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="Views\Dialogs\AppointmentFilterDialog.xaml">
         <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
         <SubType>Designer</SubType>
       </Page>
