--- a/SharpSchedule.WPF/SharpSchedule.WPF.csproj
+++ b/SharpSchedule.WPF/SharpSchedule.WPF.csproj
@@ -35,6 +35,9 @@
       <Compile Update="Views\Dialogs\AppointmentDialog.xaml.cs">
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="Views\Dialogs\AlarmDialog.xaml.cs">
+        <SubType>Code</SubType>
+      </Compile>
       <Compile Update="Views\Dialogs\CustomerDialog.xaml.cs">
         <SubType>Code</SubType>
       </Compile>
@@ -65,6 +68,10 @@
         <SubType>Designer</SubType>
       </Page>
       <Page Update="Views\Dialogs\AppointmentDialog.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="Views\Dialogs\AlarmDialog.xaml">
         <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
         <SubType>Designer</SubType>
       </Page>
