--- a/SharpSchedule.Persistence/SharpSchedule.Persistence.csproj
+++ b/SharpSchedule.Persistence/SharpSchedule.Persistence.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
-    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.0-m8.0.23" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
